RESOLVED FIXED282562
BBC iPlayer: PiP button doesn't work when in full screen
https://bugs.webkit.org/show_bug.cgi?id=282562
Summary BBC iPlayer: PiP button doesn't work when in full screen
Dana Estra
Reported 2024-11-04 14:20:27 PST
BBC iPlayer: PiP button doesn't work when in full screen
Attachments
Dana Estra
Comment 1 2024-11-04 14:20:28 PST
Dana Estra
Comment 2 2024-11-04 14:29:31 PST
EWS
Comment 3 2024-11-05 10:55:57 PST
Committed 286170@main (c324e22ac475): <https://commits.webkit.org/286170@main> Reviewed commits have been landed. Closing PR #36149 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.