BBC iPlayer: PiP button doesn't work when in full screen https://bugs.webkit.org/show_bug.cgi?id=282562 rdar://126494734

Reviewed by Jer Noble.

bbc.co.uuk currently listens for a fullscreenchangeevent, and if there
is an active PIP element, exits pip. However, because we start entering
pip before we have fully exited fullscreen, we have an active pip element
during our exit fullscreen to pip animation. This causes the webpage to
immediately exit pip when the user attempts to enter pip from fullscreen.

This change adds a quirk to bbc.co.uk, so that when the website asks
for the pictureInPictureElement, we return a nullptr if we are
in a fullscreenchange event.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::pictureInPictureElement const):
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::returnNullPictureInPictureElementDuringFullscreenChange const):
* Source/WebCore/page/Quirks.h:

Canonical link: https://commits.webkit.org/286170@main